--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
   "dependencies": {
     "bulma": "^0.9.0",
     "express": "^4.17.1",
+    "node-sass": "^4.14.1",
     "pug": "^3.0.0",
     "webpack": "^4.44.1"
   }
