--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
   },
   "homepage": "https://github.com/bcatouillard/Portfolio#readme",
   "dependencies": {
+    "@fortawesome/fontawesome-free": "^5.14.0",
     "bulma": "^0.9.0",
     "express": "^4.17.1",
     "node-sass": "^4.14.1",
