--- a/package.json
+++ b/package.json
@@ -22,7 +22,9 @@
   "dependencies": {
     "@fortawesome/fontawesome-free": "^5.14.0",
     "bulma": "^0.9.0",
+    "dotenv": "^8.2.0",
     "express": "^4.17.1",
+    "mysql": "^2.18.1",
     "node-sass": "^4.14.1",
     "pug": "^3.0.0",
     "serve-favicon": "^2.5.0",
