--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "express": "^4.17.1",
     "mysql": "^2.18.1",
     "node-sass": "^4.14.1",
+    "nodemailer": "^6.4.11",
     "pug": "^3.0.0",
     "serve-favicon": "^2.5.0",
     "webpack": "^4.44.1"
