--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "bulma": "^0.9.0",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
+    "helmet": "^4.2.0",
     "mysql": "^2.18.1",
     "node-sass": "^4.14.1",
     "nodemailer": "^6.4.11",
