--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "express": "^4.17.1",
     "helmet": "^4.2.0",
     "mysql": "^2.18.1",
+    "node-fetch": "^2.6.1",
     "node-sass": "^4.14.1",
     "nodemailer": "^6.4.11",
     "pug": "^3.0.0",
